<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/starMessage"
        android:title="@string/star_message"
        app:showAsAction="ifRoom"
        android:icon="?attr/starMessage" />

</menu>